added footer, made header responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="navbar">
+    <header id="navbar">
         <div id="navleft">
             <a href="index.html"><img src="images/logo.png" id="logo" alt="Fromsoftware logo"></a>
             <img src="images/controller.png" onclick="openModal()" id="controllerLogo" title="Track Your Games" alt="trackgame">
@@ -30,10 +30,19 @@
                 </div>
             </a>
         </div>
-    </div>
+    </header>
     <div id="main">
         
     </div>
+    <footer>
+        
+        <div>
+            &copy Minden fog fenntartva - mcbulazs
+        </div>
+        <a href="https://github.com/mcbulazs/web-beanado" target="_blank">
+            <img src="images/github.png" alt="github logo">
+        </a>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
