--- a/html/soulslike.html
+++ b/html/soulslike.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FromSoftware - Home</title>
+    <title>FromSoftware - Soulslike</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/soulslike.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
         </div>
         <nav>
             <a href="./soulslike.html" >
-                <div id="SoulsLikePage" class="button">
+                <div id="SoulslikePage" class="button">
                     Soulslike
                 </div>
             </a>
@@ -42,9 +43,9 @@
             &copy Minden fog fenntartva - mcbulazs
         </div>
         <a href="https://github.com/mcbulazs/web-beanado" target="_blank">
-            <img src="images/github.png" alt="github logo">
+            <img src="../images/github.png" alt="github logo">
         </a>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
