--- a/html/games.html
+++ b/html/games.html
@@ -40,7 +40,7 @@
     <footer>
         
         <div>
-            &copy Minden fog fenntartva - mcbulazs
+            &copy; Minden fog fenntartva - mcbulazs
         </div>
         <a href="https://github.com/mcbulazs/web-beanado" target="_blank">
             <img src="../images/github.png" alt="github logo">
