Soulslike page skeleton done

--- a/html/soulslike.html
+++ b/html/soulslike.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,16 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/soulslike.css">
 </head>
+
 <body>
     <header>
         <div id="headerLeft">
             <a href="../index.html"><img src="../images/logo.png" id="logo" alt="Fromsoftware logo"></a>
-            <img src="../images/controller.png" onclick="openModal()" id="controllerLogo" title="Track Your Games" alt="trackgame">
+            <img src="../images/controller.png" onclick="openModal()" id="controllerLogo" title="Track Your Games"
+                alt="trackgame">
         </div>
         <nav>
-            <a href="./soulslike.html" >
+            <a href="./soulslike.html">
                 <div id="SoulslikePage" class="button">
                     Soulslike
                 </div>
@@ -25,7 +28,7 @@
                     Games
                 </div>
             </a>
-            <a href="./company.html" >
+            <a href="./company.html">
                 <div id="CompanyPage" class="button">
                     Company
                 </div>
@@ -34,11 +37,141 @@
     </header>
     <div id="middle">
         <div id="main">
-            main
+            <h1>Soulslike</h1>
+            <h2>Etymology</h2>
+            <p>
+                The term "Soulslike" refers to a genre of action role-playing games that have gained popularity
+                due to the success of FromSoftware's Dark Souls series. The term itself is a neologism that
+                derives from the name of the series, which is known for its high level of difficulty and emphasis
+                on exploration and combat. The "like" suffix is often used in gaming circles to denote a game
+                that is similar in style or gameplay to a well-known title, as is the case with other terms like
+                "Roguelike" or "Metroidvania." The Soulslike genre is characterized by challenging gameplay,
+                intricate world-building, and a focus on player skill and strategy.
+            </p>
+            <article>
+                <h2>Concept</h2>
+
+                <h3>Expected player death</h3>
+                <p>
+                    In Soulslike games, the concept of repeated player death is a core part of the gameplay
+                    experience. Players are often expected to die multiple times as they explore the game's world
+                    and encounter various enemies and obstacles. While this may sound frustrating, it is actually an
+                    intentional design choice meant to reinforce the game's difficulty and encourage players to learn
+                    from their mistakes. Each death provides an opportunity for the player to reflect on what went
+                    wrong and adjust their approach accordingly, leading to a sense of progress and achievement
+                    as they slowly improve their skills and overcome each challenge. Soulslike games typically
+                    feature a checkpoint system that allows players to respawn at certain points in the game world,
+                    but dying still carries consequences such as loss of progress or resources. The repeated player
+                    death in Soulslike games adds to the sense of risk and reward, making the eventual victory all
+                    the more satisfying.
+
+                </p>
+                <h3>Currency</h3>
+                <div>
+                    <p>
+                        The concept of currency as a means of permanently boosting a player's character is a key
+                        feature of many Soulslike games. This currency, often called "souls," is typically obtained by
+                        defeating enemies or completing objectives, and can be used to purchase new equipment, level
+                        up the player's character, or permanently increase certain attributes such as health or stamina.
+                        The catch is that if the player dies, they will lose all of their souls and respawn at the last
+                        checkpoint, requiring them to retrieve their lost currency by returning to the spot where they
+                        died. This creates a sense of risk and reward, as players must weigh the benefits of spending
+                        their hard-earned souls against the possibility of losing them all in a single misstep. The
+                        concept
+                        of currency in Soulslike games reinforces the game's difficulty and emphasizes the importance
+                        of strategic decision-making, while also providing a sense of progression and customization as
+                        the player's character becomes stronger over time.
+                    </p>
+                    <img src="../images/soulslikesoul.png" alt="Soul(currency)">
+                </div>
+                <h3>Checkpoints</h3>
+                <div>
+                    <p>In Soulslike games, the concept of checkpoints serves as a means of saving progress and
+                        resetting the player's position in the game world. Checkpoints, often represented by bonfires or
+                        lanterns, are scattered throughout the game world and allow players to rest, replenish their
+                        health and magic, and save their progress. Upon resting at a checkpoint, enemies in the
+                        surrounding area will respawn, presenting new challenges and opportunities for the player to
+                        earn experience points and currency. Checkpoints can also serve as a means of fast travel,
+                        allowing players to quickly move between different areas of the game world once they have
+                        been unlocked. However, players must exercise caution when using checkpoints, as dying after
+                        resting will cause them to respawn at the last checkpoint and lose any progress made since
+                        then. The concept of checkpoints in Soulslike games creates a sense of tension and risk,
+                        forcing players to weigh the benefits of pushing forward against the potential consequences of
+                        losing progress.
+                    </p>
+                    <img src="../images/soulslikebonfire.png" alt="Bonfire">
+                </div>
+                <h3>Combat</h3>
+                <div>
+                    <p>Combat is a crucial aspect of Soulslike games, and is characterized by a number of unique
+                        mechanics that set it apart from other action games. The most prominent of these mechanics is
+                        the use of stamina, which governs the player's ability to attack, block, and dodge. Each action
+                        depletes a portion of the player's stamina bar, requiring them to carefully manage their
+                        resources and avoid overextending themselves in combat. Another key mechanic is the iframe
+                        roll, which grants the player a brief window of invincibility during a dodge roll, allowing them to
+                        avoid attacks and reposition themselves for a counterattack. This iframe roll is essential for
+                        surviving in combat and requires precise timing and positioning to execute effectively. The
+                        combat in Soulslike games is designed to be challenging and requires players to rely on skill
+                        and strategy rather than brute force, rewarding those who take the time to learn enemy patterns
+                        and master the game's mechanics. The result is a deeply satisfying combat system that
+                        emphasizes player agency and mastery, and is a hallmark of the Soulslike genre.
+                    </p>
+                    <img src="../images/soulslikeroll.png" alt="Roll">
+                </div>
+            </article>
+            <h2>Most Popular Games of Soulslike from other developers</h2>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Studio</th>
+                    <th>Release Year</th>
+                </tr>
+                <tr>
+                    <td>Nioh</td>
+                    <td>Team Ninja</td>
+                    <td>2017</td>
+                </tr>
+                <tr>
+                    <td>Salt and Sanctuary</td>
+                    <td>Ska Studios</td>
+                    <td>2016</td>
+                </tr>
+                <tr>
+                    <td>Hollow Knight</td>
+                    <td>Team Cherry</td>
+                    <td>2017</td>
+                </tr>
+                <tr>
+                    <td>Mortal Shell</td>
+                    <td>Cold Symmetry</td>
+                    <td>2020</td>
+                </tr>
+                <tr>
+                    <td>Blasphemous</td>
+                    <td>The Game Kitchen</td>
+                    <td>2019</td>
+                </tr>
+                <tr>
+                    <td>The Surge</td>
+                    <td>Deck13 Interactive</td>
+                    <td>2017</td>
+                </tr>
+                <tr>
+                    <td>Ashen</td>
+                    <td>A44 Games</td>
+                    <td>2018</td>
+                </tr>
+                <tr>
+                    <td>Code Vein</td>
+                    <td>Bandai Namco Studios</td>
+                    <td>2019</td>
+                </tr>
+            </table>
         </div>
     </div>
+    </div>
     <footer>
-        
+
         <div>
             &copy; Minden fog fenntartva - mcbulazs
         </div>
@@ -48,4 +181,5 @@
     </footer>
     <script src="../js/script.js"></script>
 </body>
+
 </html>
