skeleton of company page done

--- a/html/company.html
+++ b/html/company.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,16 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/company.css">
 </head>
+
 <body>
     <header>
         <div id="headerLeft">
             <a href="../index.html"><img src="../images/logo.png" id="logo" alt="Fromsoftware logo"></a>
-            <img src="../images/controller.png" onclick="openModal()" id="controllerLogo" title="Track Your Games" alt="trackgame">
+            <img src="../images/controller.png" onclick="openModal()" id="controllerLogo" title="Track Your Games"
+                alt="trackgame">
         </div>
         <nav>
-            <a href="./soulslike.html" >
+            <a href="./soulslike.html">
                 <div id="SoulslikePage" class="button">
                     Soulslike
                 </div>
@@ -25,7 +28,7 @@
                     Games
                 </div>
             </a>
-            <a href="./company.html" >
+            <a href="./company.html">
                 <div id="CompanyPage" class="button">
                     Company
                 </div>
@@ -34,11 +37,60 @@
     </header>
     <div id="middle">
         <div id="main">
-            main
-        </div>
+            <h1>Company</h1>
+            <article id="company">
+                <h2>About</h2>
+                <img src="../images/hq.png" alt="headquarters">
+                <p>FromSoftware is a renowned video game developer based in Japan, known for its challenging and
+                    immersive action RPGs. Founded in 1986, the company began by developing games for the original
+                    PlayStation and has since become a household name among gamers. FromSoftware has a reputation for
+                    creating games that are not only difficult but also deeply rewarding to players who persevere.
+                </p>
+                <p>
+                    One of the hallmarks of FromSoftware's games is their intricate level design. The company's games
+                    often feature sprawling environments filled with hidden paths and secrets, encouraging players to
+                    explore and discover new areas. FromSoftware's level design also tends to be highly interconnected,
+                    with shortcuts and secret passages that allow players to navigate the world more efficiently.
+                </p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.1523834294017!2d139.66027023500814!3d35.67324968715023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f31aee607a17%3A0xb19b1bca69774bb8!2sFrom%20Software!5e0!3m2!1sen!2shu!4v1679654440884!5m2!1sen!2shu"
+                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p>
+                    Another defining feature of FromSoftware's games is their challenging difficulty. Players must
+                    carefully manage their resources and learn from their mistakes in order to progress through the
+                    game. The combat system is typically based on stamina management, with players having to carefully
+                    time their attacks and dodges to avoid taking damage. The difficulty of FromSoftware's games has
+                    made them a favorite among hardcore gamers, who relish the challenge and the sense of accomplishment
+                    that comes with overcoming it.
+                </p>
+                <p>Despite their difficulty, FromSoftware's games are also known for their deep and intricate lore. The
+                    company's games often feature complex storylines and a wealth of world-building details, giving
+                    players a rich and immersive experience. FromSoftware's games are also notable for their minimalist
+                    storytelling approach, with much of the story and world-building conveyed through environmental
+                    storytelling and item descriptions.</p>
+            </article>
+            <article id="hidetaka">
+
+                <h2>Hidetaka Miyazaki</h2>
+                <img src="../images/hidetaka.png" alt="">
+                <p>Hidetaka Miyazaki is a Japanese video game designer and director known for creating challenging and
+                    atmospheric games that prioritize gameplay mechanics over flashy graphics. Miyazaki is known for his
+                    unique game design philosophy that emphasizes player skill, exploration, and environmental storytelling.
+                    Miyazaki's games are characterized by their deliberate combat, interconnected level design, and deep
+                    lore that is often left up to player interpretation. He is also known for his collaborations with other
+                    creatives, including writers and artists, which have helped to enrich the worlds and characters he
+                    creates.
+                    Miyazaki's innovative approach to game design has earned him a loyal fanbase and critical acclaim, with
+                    many considering him to be one of the most influential video game designers of his generation. He
+                    continues to work on new projects and push the boundaries of game design, with his games inspiring a new
+                    generation of game developers and players alike
+                </p>
+                <p>Miyazaki's influence extends beyond his own games and has had a significant impact on the gaming industry as a whole. His design philosophy has inspired a wave of imitators and spawned a new sub-genre of action RPGs known as "Souls-like" games. Miyazaki's games have also influenced the way that developers approach game difficulty and storytelling, with many games now taking a more minimalist approach to both. In addition, Miyazaki's focus on player agency and exploration has helped to popularize the idea of emergent gameplay, where players are encouraged to experiment and discover new ways to play. As Miyazaki continues to innovate and create, his legacy in the gaming industry is sure to be felt for years to come.</p>
+            </article>
+            </div>
     </div>
     <footer>
-        
+
         <div>
             &copy; Minden fog fenntartva - mcbulazs
         </div>
@@ -48,4 +100,5 @@
     </footer>
     <script src="../js/script.js"></script>
 </body>
+
 </html>
