--- a/html/soulslike.html
+++ b/html/soulslike.html
@@ -108,7 +108,8 @@
                         the use of stamina, which governs the player's ability to attack, block, and dodge. Each action
                         depletes a portion of the player's stamina bar, requiring them to carefully manage their
                         resources and avoid overextending themselves in combat. Another key mechanic is the iframe
-                        roll, which grants the player a brief window of invincibility during a dodge roll, allowing them to
+                        roll, which grants the player a brief window of invincibility during a dodge roll, allowing them
+                        to
                         avoid attacks and reposition themselves for a counterattack. This iframe roll is essential for
                         surviving in combat and requires precise timing and positioning to execute effectively. The
                         combat in Soulslike games is designed to be challenging and requires players to rely on skill
