--- a/html/company.html
+++ b/html/company.html
@@ -36,17 +36,20 @@
         </nav>
     </header>
     <div id="middle">
+        <h1>COMPANY</h1>
         <div id="main">
-            <h1>Company</h1>
             <article id="company">
                 <h2>About</h2>
-                <img src="../images/hq.png" alt="headquarters">
+                <a  href="../images/hq.png" target="_blank">
+
+                    <img id="hq" src="../images/hq.png" alt="headquarters">
+                </a>
                 <p>FromSoftware is a renowned video game developer based in Japan, known for its challenging and
                     immersive action RPGs. Founded in 1986, the company began by developing games for the original
                     PlayStation and has since become a household name among gamers. FromSoftware has a reputation for
                     creating games that are not only difficult but also deeply rewarding to players who persevere.
                 </p>
-                <p>
+                <p id="valami">
                     One of the hallmarks of FromSoftware's games is their intricate level design. The company's games
                     often feature sprawling environments filled with hidden paths and secrets, encouraging players to
                     explore and discover new areas. FromSoftware's level design also tends to be highly interconnected,
@@ -72,7 +75,9 @@
             <article id="hidetaka">
 
                 <h2>Hidetaka Miyazaki</h2>
-                <img src="../images/hidetaka.png" alt="">
+                <a href="../images/hidetaka.png" target="_blank">
+                    <img src="../images/hidetaka.png" alt="hidetaka">
+                </a>
                 <p>Hidetaka Miyazaki is a Japanese video game designer and director known for creating challenging and
                     atmospheric games that prioritize gameplay mechanics over flashy graphics. Miyazaki is known for his
                     unique game design philosophy that emphasizes player skill, exploration, and environmental storytelling.
@@ -106,6 +111,7 @@
             </div>
         </div>
     </div>
+    <img src="../images/sun.png" id="colorChanger" onclick="colorChange()">
     <footer>
 
         <div>
