--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             </div>
         </div>
     </div>
+    <img src="images/sun.png" id="colorChanger" onclick="colorChange()">
     <footer>
-
         <div>
             &copy; Minden fog fenntartva - mcbulazs
         </div>
